===============================================================================
Version 3.2.1
===============================================================================
New Features:
  - Added getAngularTranslation and getLinearSpeed methods to the WheelJoint
    class.
  - Added setLength method to the PulleyJoint class.

Bug Fixes:
    
Deprecated:
  - getJointTranslation and getJointSpeed on the WheelJoint class for
    getLinearTranslation and getAngularSpeed.
  
Breaking Changes:
  
Other:
  - Updated samples to use a common base class for rendering and other stuff
    to make the samples contain mostly dyn4j usage code.
  - The WheelJoint's default frequency is now set to 8.0 by default for easier 
    use.
  - The RevoluteJoint's default limits are set to the initial angle between
    the bodies (the limit is still disabled by default).
  - More javadoc updates.

===============================================================================
Version 3.2.0
===============================================================================
New Features:
  - Performance improvements.
    
Bug Fixes:
    
Deprecated:
  - Body.setMass() it was odd that it set the mass type to Mass.Type.NORMAL.
    use the Body.setMass(MassType) method instead.
  
Breaking Changes:
  - The Mass.Type enumeration has been renamed to MassType.
  - The BroadphaseDetector interface has changed drastically.
  - The three SAP algorithms have been replaced by one.
  - The CollisionListener.collision(Body,Body) method has been removed due
    to changes made to the broad-phase.
  - The Body.getFixtures() method now returns an unmodifiable list.
  - The World.getBodies() and World.getJoints() methods now return unmodifiable
    lists.
  - The Bounds interface changed to only include the Translatable
    interface due to the some bounds types not supporting rotation.
  - Many member variables and methods have been made final, package private and
    private.